# smctm

./: .gitignore  README.md  main.py  pyproject.toml
conf/: config.yaml
conf/hyperparameter_search_space/: CTM.yaml  LSTM.yaml
conf/model/: CTM.yaml  LSTM.yaml
conf/task/: CIFARFewShot.yaml  Copy.yaml  FewShotCIFAR.yaml  FewShotImageClassification.yaml  FewShotMiniImageNet.yaml
models/: __init__.py  backbones.py  ctm.py  interactions.py  lstm.py
tasks/: __init__.py  cifarfewshot.py  copy.py  few_shot_cifar.py  few_shot_image_classification.py  few_shot_miniimagenet.py  task.py  utils.py
utils/: __init__.py  logging.py  plotting.py
